--- a/src/features/popular-movies/pages/popular-movies/popular-movies.html
+++ b/src/features/popular-movies/pages/popular-movies/popular-movies.html
@@ -1,6 +1,10 @@
-<h1>Popular</h1>
+<h1 class="title ellipsis">Popular movies</h1>
+
 <div class="container">
+
   @for (movie of (movies$ | async); track movie.id) {
-    <div>{{movie.title}}</div>
+    <app-movie-card [movie]="movie" />
   }
 </div>
+
+<router-outlet></router-outlet>
