--- a/src/features/popular-movies/pages/popular-movies/popular-movies.html
+++ b/src/features/popular-movies/pages/popular-movies/popular-movies.html
@@ -1,10 +1,19 @@
-<h1 class="title ellipsis">Popular movies</h1>
+<h1 class="title ellipsis" id="page-title">Popular movies</h1>
 
-<div class="container">
+<section class="container" aria-labelledby="page-title">
+  @if (loading$ | async){
+    <h1 class="placeholder-text" role="status" aria-live="polite">Loading...</h1>
+  } @else if (error$ | async) {
+    <h1 class="placeholder-text alert" role="alert">Something went wrong</h1>
+  } @else {
 
-  @for (movie of (movies$ | async); track movie.id) {
-    <app-movie-card [movie]="movie" />
+    @for (movie of (movies$ | async); track movie.id) {
+      <app-movie-card [movie]="movie" />
+    } @empty {
+      <h1 class="placeholder-text"> No movies found</h1>
+    }
+
   }
-</div>
+</section>
 
 <router-outlet></router-outlet>
